# delta-swap

./: .gitignore  LICENSE  README.md
contract/: .gitignore  Cargo.toml  base64_schema.b64  exchange.wasm.v1
contract/src/: cis2_client.rs  errors.rs  events.rs  lib.rs  state.rs
frontend/: .gitignore  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: Cis2Types.d.ts  Constants.ts  Exchange.ts  Tokens.ts  Wallet.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.svelte  Header.svelte  SelectButton.svelte  SelectModal.svelte  Swap.svelte  Swap.ts  TokenList.svelte  TokenList.ts
frontend/src/routes/liquidity/: +page.svelte  +page.ts  LiquidityList.svelte  LiquidityModal.svelte  LiquidityPool.svelte  LiquidityPool.ts
