# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "exchange"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
authors = [ "visdauas <visdauas@gmail.com>" ]
description = "exchange"

[features]
default = ["std"]
std = ["concordium-std/std"]
wee_alloc = ["concordium-std/wee_alloc"]

[dependencies]
concordium-cis2 = {version = "3.0.0", u256_amount = true}
concordium-std = {version = "6.0", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
